# dcmnorm

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  test.dcm
.github/workflows/: release.yml  semver-tag.yml
exec/dcmnorm/: Cargo.toml
exec/dcmnorm/src/: main.rs
scripts/: install-exec.sh  release-tag.sh
src/: dicom_io.rs  lib.rs
src/dicom_io/: bulk_data.rs  common.rs  flat_json.rs  io.rs  jpeg_ls.rs  json.rs  kakadu.rs  kakadu_bridge.cpp  mpeg.rs  render.rs  standard_json.rs  tests.rs  types.rs
test/files/: dx2.dcm  notdicom.txt  pdf.dcm  sc.dcm  sr.dcm  sr2.dcm  us.dcm  xa2.dcm
