[package]
name = "dcmnorm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = [
	"exec/dcmnorm",
]
resolver = "2"

[features]
kakadu-ffi = []

[dependencies]
base64 = "0.22"
dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-encoding = "0.9.1"
dicom-json = "0.9.0"
dicom-object = "0.9.1"
dicom-transfer-syntax-registry = { version = "0.9.1", default-features = false, features = ["native", "deflate", "openjp2"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.2"