[package]
name = "dcmnorm"
version = "0.1.9"
edition = "2021"
build = "build.rs"

[workspace]
members = [
	"exec/dcmnorm",
]
resolver = "2"

[features]
default = ["ffmpeg-codec", "jpeg-ls-codec"]
kakadu-ffi = []
ffmpeg-codec = ["dep:ffmpeg-next"]
jpeg-ls-codec = ["dep:charls"]

[dependencies]
base64 = "0.22"
dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-encoding = "0.9.1"
dicom-json = "0.9.0"
dicom-object = "0.9.1"
dicom-transfer-syntax-registry = { version = "0.9.1", default-features = false, features = ["native", "deflate", "openjpeg-sys"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0"
ffmpeg-next = { version = "8.1", optional = true, default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"] }
charls = { version = "0.4.2", optional = true }

[build-dependencies]
cc = "1.2"
