[package]
name = "dcmnorm-cli"
version = "0.1.9"
edition = "2021"

[features]
default = []
kakadu-ffi = ["dcmnorm/kakadu-ffi"]

[[bin]]
name = "dcmnorm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dcmnorm = { path = "../.." }
dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.1"
sha2 = "0.10"
